--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Aditya\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+user.properties.file=/Users/tinyteddybear/Library/Application Support/NetBeans/8.2/build.properties
