--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
-user.properties.file=/Users/tinyteddybear/Library/Application Support/NetBeans/8.2/build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Aditya\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
