--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Aditya\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
+user.properties.file=/Users/tinyteddybear/Library/Application Support/NetBeans/8.2/build.properties
