--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,7 +24,7 @@ javac.compilerargs=
 javadoc.noindex=false
 javadoc.private=false
 javadoc.author=false
-main.class=javaFxDriver.Init
+main.class=userInterface.mainFrame
 junit.selected.version=4
 source.encoding=UTF-8
 javac.source=1.8
@@ -69,7 +69,7 @@ javac.test.modulepath=\
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
 javac.target=1.8
-platform.active=default_platform
+platform.active=JDK_1.8
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
