--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,27 @@
 application.title=PSO
 application.vendor=Aditya
 endorsed.classpath=
+file.reference.jcommon-1.0.23.jar=jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=jfreechart-1.0.19.jar
+jar.archive.disabled=${jnlp.enabled}
+jar.index=${jnlp.enabled}
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 #Sun Aug 11 21:12:45 EDT 2019
 run.classpath=\
     ${javac.classpath}:\
@@ -46,7 +67,9 @@ run.jvmargs=
 jlink.additionalmodules=
 javadoc.encoding=${source.encoding}
 javac.classpath=\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 mkdist.disabled=false
 run.test.modulepath=\
     ${javac.test.modulepath}
