--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -92,7 +92,7 @@ javac.test.modulepath=\
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
 javac.target=1.8
-platform.active=default_platform
+platform.active=JDK_1.8
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
