--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,7 @@ javac.compilerargs=
 javadoc.noindex=false
 javadoc.private=false
 javadoc.author=false
-main.class=userInterface.mainFrame
+main.class=javafxapplication4.JavaFXApplication4
 junit.selected.version=4
 source.encoding=UTF-8
 javac.source=1.8
@@ -92,7 +92,7 @@ javac.test.modulepath=\
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
 javac.target=1.8
-platform.active=JDK_1.8
+platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
